--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,17 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.DriverServer:
 Server:
   Port: 8080
 
 spring:
-#  jpa:
-#    hibernate:
-#      ddl-auto: none
+  jpa:
+    hibernate:
+      ddl-auto: none
 #       // dialect: org.hibernate.dialect.MySQL8Dialect
-  datasource:
-    url: jdbc:mysql://cmu-17647-hw1-databasereplicainstance-nxu59gutfepz.crvoqcxxien2.us-east-1.rds.amazonaws.com:3306/Scalable_A1
-    username: yipingz2
-    password: Zyp980211
 #  datasource:
-#    url: jdbc:mysql://localhost:3306/Scalable_A1
-#    username: root
-#    password: iloveMYSELF123!
+#    url: jdbc:mysql://cmu-17647-hw1-databasereplicainstance-nxu59gutfepz.crvoqcxxien2.us-east-1.rds.amazonaws.com:3306/Scalable_A1
+#    username: yipingz2
+#    password: Zyp980211
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+  datasource:
+    url: jdbc:mysql://localhost:3306/Scalable_A1
+    username: root
+    password: iloveMYSELF123!
