--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
     hibernate:
       ddl-auto: none
 #       // dialect: org.hibernate.dialect.MySQL8Dialect
-#  datasource:
-#    url: jdbc:mysql://cmu-17647-hw1-databasereplicainstance-nxu59gutfepz.crvoqcxxien2.us-east-1.rds.amazonaws.com:3306/Scalable_A1
-#    username: yipingz2
-#    password: Zyp980211
-#    driver-class-name: com.mysql.cj.jdbc.Driver
   datasource:
-    url: jdbc:mysql://localhost:3306/Scalable_A1
+    url: jdbc:mysql://cmu-17647-hw1-databaseprimaryinstance-gwk2kdoqrgz8.crvoqcxxien2.us-east-1.rds.amazonaws.com:3306/Scalable
     username: root
-    password: iloveMYSELF123!
+    password: Zyp980211
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/Scalable_A1
+#    username: root
+#    password: iloveMYSELF123!
